# universe-engine

./: Cargo.toml  README.md  andromeda.txt
data/: .gitignore  modding.md
data/mods/core/: mod.ron
data/sources/: transformcsv.py
shaders/: shader.wgsl
shaders/include/: fullscreen_quad.wgsl
shaders/postprocess/: bloom_recombine.wgsl  bloom_threshold.wgsl  chromatic_aberration.wgsl  gaussian_blur.wgsl  identity.wgsl  tonemap.wgsl
src/: fp.rs  main.rs  transform.rs  tree.rs
src/render/: camera.rs  graph.rs  mesh.rs  mod.rs  pipeline.rs  texture.rs
src/universe/: fs.rs  mod.rs
wgsl-preprocessor/: Cargo.toml
wgsl-preprocessor/preproc-core/: Cargo.toml
wgsl-preprocessor/preproc-core/src/: lib.rs
wgsl-preprocessor/preproc-derive/: Cargo.toml
wgsl-preprocessor/preproc-derive/src/: lib.rs
wgsl-preprocessor/src/: lib.rs  main.rs
wgsl-preprocessor/tests/: args.wgsl  comments.wgsl  define.wgsl  if.wgsl  source_map.wgsl  test.wgsl
wgsl-preprocessor/tests/include/: def_include.wgsl  include.wgsl
